FISH-8652: Downgrade array construction in MapWanContextTest